[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-random-lora-chooser"
version = "1.0.0"
description = "Dynamic LoRA selection system for ComfyUI with trigger word support"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["comfyui", "lora", "diffusion", "ai", "machine-learning"]

dependencies = [
    # ComfyUI dependencies (these should already be installed with ComfyUI)
    # "torch",
    # "pillow",
]

[project.urls]
Homepage = "https://github.com/yourusername/comfyui-random-lora-chooser"
Repository = "https://github.com/yourusername/comfyui-random-lora-chooser"
Issues = "https://github.com/yourusername/comfyui-random-lora-chooser/issues"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools]
packages = ["nodes"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.py", "*.md", "*.txt", "*.json"]